# gmach

./: .gitignore  README.md  build-log.txt
.github/workflows/: build-windows.yml
app/: admin.html  index.html
app/css/: admin.css  app.css  base.css  components.css
app/docs/: MAINTENANCE.md
app/js/admin/: auth.js  editor.js  main.js  persist.js  scanner.js
app/js/app/: cards.js  details.js  download.js  help.js  main.js  search.js
app/js/core/: crypto.js  db.js  filetypes.js  fs.js  logger.js  namespace.js  paths.js  schema.js  sha256.js  storage.js  utils.js
app/js/ui/: dom.js  icons.js  modal.js  theme.js  toast.js
seed/: database.json  images-README.md  software-README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
