[package]
name = "gmach"
version = "1.0.0"
description = "מעטפת שולחן-עבודה לספריית התוכנה — exe בודד, תיקיית נתונים נוצרת אוטומטית לידו"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
url = "2"
base64 = "0.22"
serde_json = "1"
dirs = "6"

# Smaller, faster release binary — this app does nothing performance-critical,
# so trade compile time for size/startup.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
